--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
         </section>
     </header>
 
+    <!-- main body part start -->
+    <main>
+
+      <!-- About Us part -->
+      
+        <article class="container my-5">
+          <h1 class="text-center mb-3"><a class="text-decoration-none text-dark" href="">About Us</a></h1>
+          <p class="px-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eaque debitis, esse iure laboriosam animi corrupti quibusdam praesentium provident fugit quaerat sint quas veniam obcaecati sapiente ducimus modi iusto aut minus molestias accusantium quia nihil! Quae fugit praesentium, corrupti nihil pariatur libero minima rerum maxime iusto eos unde excepturi distinctio eum, quam quos earum! Itaque saepe provident labore dolores? Sed?</p>
+        </article>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
