--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/ox.png" class="d-block w-100 carousel-img" alt="...">
+                    <img src="images/carousel/ox.png" class="d-block w-100 carousel-img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h1>COW</h1>
                       <p>Some representative placeholder content for the first slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/goat.png" class="d-block w-100 carousel-img" alt="...">
+                    <img src="images/carousel/goat.png" class="d-block w-100 carousel-img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h1>GOAT</h1>
                       <p>Some representative placeholder content for the second slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/camel.png" class="d-block w-100 carousel-img" alt="...">
+                    <img src="images/carousel/camel.png" class="d-block w-100 carousel-img" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h1>CAMEL</h1>
                       <p>Some representative placeholder content for the third slide.</p>
@@ -116,12 +116,97 @@
     <!-- main body part start -->
     <main>
 
-      <!-- About Us part -->
-      
+        <!-- About Us part -->
+
         <article class="container my-5">
           <h1 class="text-center mb-3"><a class="text-decoration-none text-dark" href="">About Us</a></h1>
           <p class="px-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eaque debitis, esse iure laboriosam animi corrupti quibusdam praesentium provident fugit quaerat sint quas veniam obcaecati sapiente ducimus modi iusto aut minus molestias accusantium quia nihil! Quae fugit praesentium, corrupti nihil pariatur libero minima rerum maxime iusto eos unde excepturi distinctio eum, quam quos earum! Itaque saepe provident labore dolores? Sed?</p>
         </article>
+
+        <!-- Cows item part -->
+        <section class="container">
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow1.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow2.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow3.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow4.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow5.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="images/cows/cow6.png" class="card-img-top cow-img" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </section>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
