--- a/index.html
+++ b/index.html
@@ -25,48 +25,47 @@
         <section class="container">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top nav-bg">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img src="images/cow_favicon.png" alt="" width="30" height="24">
-                  </a>
-                  <a class="navbar-brand " href="#">Online Haat</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#about-us">About Us</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Cows</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="goat.html">Goats</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="camel.html">Camels</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Accessories
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Rope</a></li>
-                          <li><a class="dropdown-item" href="#">Feed</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                    <form class="d-flex">
-                      <button class="btn btn-outline-success add-cart" type="submit"><i class="fas fa-shopping-cart"></i> Cart</button>
-                    </form>
-                  </div>
+                    <a class="navbar-brand" href="#">
+                      <img src="images/cow_favicon.png" alt="" width="30" height="24">
+                    </a>
+                    <a class="navbar-brand " href="#">Online Haat</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#about-us">About Us</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="index.html">Cows</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="goat.html">Goats</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="camel.html">Camels</a>
+                          </li>
+                          <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Accessories
+                              </a>
+                              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Rope</a></li>
+                                <li><a class="dropdown-item" href="#">Feed</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                              </ul>
+                          </li>
+                      </ul>
+                      <form class="d-flex">
+                        <button class="btn btn-outline-success add-cart" type="submit"><i class="fas fa-shopping-cart"></i> Cart</button>
+                      </form>
+                    </div>
                 </div>
-              </nav>
+            </nav>
         </section>
 
         <!-- Carousel Part -->
@@ -233,13 +232,21 @@
             <h1 class="text-center text-dark mb-4 payment-bg"> ONLINE PAYMENT METHOD</h1>
               <div class="container">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
-                  <div class="col mr-2"><a href="payment-form/bkash.html" target="_blank"><img src="images/payment-logo/logo1.png" alt=""></a></div>
-                  <div class="col mr-2"><a href="payment-form/rocket.html" target="_blank"><img src="images/payment-logo/logo2.png" alt=""></a></div>
-                  <div class="col mr-2"><a href="payment-form/nagad.html" target="_blank"><img src="images/payment-logo/logo3.png" alt=""></a></div>
-                  <div class="col mr-2"><a href="payment-form/visa.html" target="_blank"><img src="images/payment-logo/logo4.png" alt=""></a></div>
-                  <div class="col mr-2"><a href="payment-form/mas_card.html" target="_blank"><img src="images/payment-logo/logo5.png" alt=""></a></div>
-                  
-                  
+                  <div class="col mr-2">
+                    <a href="payment-form/bkash.html" target="_blank"><img src="images/payment-logo/logo1.png" alt=""></a>
+                  </div>
+                  <div class="col mr-2">
+                    <a href="payment-form/rocket.html" target="_blank"><img src="images/payment-logo/logo2.png" alt=""></a>
+                  </div>
+                  <div class="col mr-2">
+                    <a href="payment-form/nagad.html" target="_blank"><img src="images/payment-logo/logo3.png" alt=""></a>
+                  </div>
+                  <div class="col mr-2">
+                    <a href="payment-form/visa.html" target="_blank"><img src="images/payment-logo/logo4.png" alt=""></a>
+                  </div>
+                  <div class="col mr-2">
+                    <a href="payment-form/mas_card.html" target="_blank"><img src="images/payment-logo/logo5.png" alt=""></a>
+                  </div> 
                 </div>
               </div>
           </div>
