--- a/camel.html
+++ b/camel.html
@@ -218,7 +218,7 @@
         </section>
     </main>
     <!-- footer part -->
-    <footer class="footer-bg my-5">
+    <footer class="footer-bg my-5 py-3">
         <div class="container">
             <h1 class="text-center">CONTACT</h1>
             <address class="text-center">
