--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </main>
 
     <!-- footer part -->
-    <footer class="footer-bg my-5">
+    <footer class="footer-bg my-5 py-3">
         <div class="container">
           <h1 class="text-center">CONTACT</h1>
           <address class="text-center">
