payment-from style upgrade

--- a/payment-form/visa.html
+++ b/payment-form/visa.html
@@ -14,8 +14,19 @@
     <!-- FontAwesome link -->
     <script src="https://kit.fontawesome.com/24e572bb37.js" crossorigin="anonymous"></script>
 
-    <!-- Cumstom css link -->
-    <link rel="stylesheet" href="/style.css">
+    <!-- Cumstom css style -->
+    <style>
+
+        .carousel-bg{
+            background: rgb(118,133,212);
+            background: linear-gradient(180deg, rgba(118,133,212,1) 0%, rgba(137,196,183,1)   35%,    rgba (83,     195,102,1) 100%);
+        }
+
+        .cows-bg, .footer-bg, .payment-bg, .goats-bg, .camels-bg{
+            background: rgb(203,203,203);
+            background: radial-gradient(circle, rgba(203,203,203,1) 0%, rgba(240,244,243,1)   65%,    rgba(203,203,203,1) 100%);
+        }
+    </style>
 </head>
 <body>
     <section class="container carousel-bg">
