--- a/payment-form/mas_card.html
+++ b/payment-form/mas_card.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <section class="container carousel-bg">
-        <h1 class="text-center my-5"><img src="/images/payment-logo/logo5.png" alt=""></h1>
+        <h1 class="text-center my-5"><img src="payment-logo/logo5.png" alt=""></h1>
         <div class="container payment-bg">
             <form class="row g-3">
                 <div class="col-md-6">
