hovereffect added into payment container

--- a/camel.html
+++ b/camel.html
@@ -185,7 +185,7 @@
                     <li class="page-item"><a class="page-link" href="index.html">1</a></li>
                     <li class="page-item"><a class="page-link" href="goat.html">2</a></li>
                     <li class="page-item"><a class="page-link" href="camel.html">3</a></li>
-                    <li class="page-item">
+                    <li class="page-item disabled">
                         <a class="page-link" href="#">Next</a>
                     </li>
                 </ul>
@@ -197,19 +197,19 @@
                 <h1 class="text-center text-dark mb-4 payment-bg"> ONLINE PAYMENT METHOD</h1>
                 <div class="container">
                     <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
-                        <div class="col mr-2">
+                        <div class="col mr-2 hovereffect-logo">
                             <a href="payment-form/bkash.html" target="_blank"><img src="images/payment-logo/logo1.png" alt=""></a>
                         </div>
-                        <div class="col mr-2">
+                        <div class="col mr-2 hovereffect-logo">
                             <a href="payment-form/rocket.html" target="_blank"><img src="images/payment-logo/logo2.png" alt=""></a>
                         </div>
-                        <div class="col mr-2">
+                        <div class="col mr-2 hovereffect-logo">
                             <a href="payment-form/nagad.html" target="_blank"><img src="images/payment-logo/logo3.png" alt=""></a>
                         </div>
-                        <div class="col mr-2">
+                        <div class="col mr-2 hovereffect-logo">
                             <a href="payment-form/visa.html" target="_blank"><img src="images/payment-logo/logo4.png" alt=""></a>
                         </div>
-                        <div class="col mr-2">
+                        <div class="col mr-2 hovereffect-logo">
                             <a href="payment-form/mas_card.html" target="_blank"><img src="images/payment-logo/logo5.png" alt=""></a>
                         </div>
                     </div>
