payment-logo images path  updated

--- a/index.html
+++ b/index.html
@@ -233,19 +233,19 @@
               <div class="container">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
                   <div class="col mr-2 hovereffect-logo">
-                    <a href="payment-form/bkash.html" target="_blank"><img src="images/payment-logo/logo1.png" alt=""></a>
+                    <a href="payment-form/bkash.html" target="_blank"><img src="./images/payment-logo/logo1.png" alt=""></a>
                   </div>
                   <div class="col mr-2 hovereffect-logo">
-                    <a href="payment-form/rocket.html" target="_blank"><img src="images/payment-logo/logo2.png" alt=""></a>
+                    <a href="payment-form/rocket.html" target="_blank"><img src="./images/payment-logo/logo2.png" alt=""></a>
                   </div>
                   <div class="col mr-2 hovereffect-logo">
-                    <a href="payment-form/nagad.html" target="_blank"><img src="images/payment-logo/logo3.png" alt=""></a>
+                    <a href="payment-form/nagad.html" target="_blank"><img src="./images/payment-logo/logo3.png" alt=""></a>
                   </div>
                   <div class="col mr-2 hovereffect-logo">
-                    <a href="payment-form/visa.html" target="_blank"><img src="images/payment-logo/logo4.png" alt=""></a>
+                    <a href="payment-form/visa.html" target="_blank"><img src="./images/payment-logo/logo4.png" alt=""></a>
                   </div>
                   <div class="col mr-2 hovereffect-logo">
-                    <a href="payment-form/mas_card.html" target="_blank"><img src="images/payment-logo/logo5.png" alt=""></a>
+                    <a href="payment-form/mas_card.html" target="_blank"><img src="./images/payment-logo/logo5.png" alt=""></a>
                   </div> 
                 </div>
               </div>
